--- a/app/src/main/res/layout/activity_dob.xml
+++ b/app/src/main/res/layout/activity_dob.xml
@@ -30,7 +30,7 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="88dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
